bk_ida/gccida/c2/do_compare_rtx_and_jump
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_compare_rtx_and_jump/src/expr.c:10429:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_compare_rtx_and_jump/src/expr.c:10431:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_compare_rtx_and_jump/src/expr.c:10436:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v10; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_compare_rtx_and_jump/src/expr.c:10460:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v13 = mode_class_0[mode]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_compare_rtx_and_jump/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_compare_rtx_and_jump/src/expr.c:10490:2: error: expected expression
 struct expr = cfun->expr; 
 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_compare_rtx_and_jump/src/expr.c:10502:14: error: expected identifier or '('
 struct expr = cfun->expr; 
             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_compare_rtx_and_jump/src/obj/expr.o] Error 1
